--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
-        <activity android:name="io.appflate.droidvmp.androidsample.ui.activities.ReposActivity">
+        <activity android:name="io.appflate.droidvmp.androidsample.ui.activities.RepositoriesActivity">
         </activity>
     </application>
 
