--- a/circle.yml
+++ b/circle.yml
@@ -22,6 +22,16 @@ test:
   post:
     - mkdir -p $CIRCLE_ARTIFACTS/sample/reports
     - mkdir -p $CIRCLE_ARTIFACTS/sample/test-results
+    - mkdir -p $CIRCLE_ARTIFACTS/sample-dagger/reports
+    - mkdir -p $CIRCLE_ARTIFACTS/sample-dagger/test-results
+    - mkdir -p $CIRCLE_ARTIFACTS/library/reports
+    - mkdir -p $CIRCLE_ARTIFACTS/library/test-results
     - cp -r sample/build/test-results/ $CIRCLE_ARTIFACTS/sample/test-results
     - cp -r sample/build/reports/ $CIRCLE_ARTIFACTS/sample/reports
     - cp -r sample/build/outputs/ $CIRCLE_ARTIFACTS/sample/outputs
+    - cp -r sample-dagger/build/test-results/ $CIRCLE_ARTIFACTS/sample-dagger/test-results
+    - cp -r sample-dagger/build/reports/ $CIRCLE_ARTIFACTS/sample-dagger/reports
+    - cp -r sample-dagger/build/outputs/ $CIRCLE_ARTIFACTS/sample-dagger/outputs
+    - cp -r library/build/test-results/ $CIRCLE_ARTIFACTS/library/test-results
+    - cp -r library/build/reports/ $CIRCLE_ARTIFACTS/library/reports
+    - cp -r library/build/outputs/ $CIRCLE_ARTIFACTS/library/outputs
