split libraries into app and presentation modules

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -14,4 +14,24 @@
  * limitations under the License.
  */
 
-include ':app', ':presentation', ':sample-dagger', ':sample', ':sample-parcelable'
+apply from: '../quality_tools/findbugs.gradle'
+apply plugin: 'java'
+
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+  classifier = 'sources'
+  from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+  classifier = 'javadoc'
+  from javadoc.destinationDir
+}
+
+artifacts {
+  archives sourcesJar
+  archives javadocJar
+}
+
