--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,19 +15,21 @@
  */
 
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
 apply from: '../quality_tools/findbugs.gradle'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.andrzejchm'
 
 
 android {
-  compileSdkVersion 24
-  buildToolsVersion "24"
+  compileSdkVersion 25
+  buildToolsVersion "25.0.2"
 
   defaultConfig {
     minSdkVersion 10
-    targetSdkVersion 24
+    targetSdkVersion 25
     versionCode 1
-    versionName "0.1.3"
+    versionName "0.1.4"
   }
   buildTypes {
     release {
@@ -44,8 +46,9 @@ android {
 }
 
 dependencies {
+  compile project(':presentation')
   compile fileTree(dir: 'libs', include: ['*.jar'])
   testCompile 'junit:junit:4.12'
-  compile 'com.android.support:appcompat-v7:24.1.1'
+  compile 'com.android.support:appcompat-v7:25.1.0'
   compile 'com.google.code.findbugs:annotations:2.0.3'
 }
