--- a/sample-dagger/build.gradle
+++ b/sample-dagger/build.gradle
@@ -30,13 +30,13 @@ apply plugin: 'android-apt'
 apply from: '../quality_tools/findbugs.gradle'
 
 android {
-  compileSdkVersion 24
-  buildToolsVersion "24"
+  compileSdkVersion 25
+  buildToolsVersion "25.0.2"
 
   defaultConfig {
     applicationId "io.appflate.droidmvp.androidsample"
     minSdkVersion 10
-    targetSdkVersion 24
+    targetSdkVersion 25
     versionCode 1
     versionName "1.0"
     testInstrumentationRunner 'io.appflate.droidmvp.androidsample.CustomTestRunner'
@@ -57,24 +57,24 @@ android {
 
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
-  compile 'com.android.support:appcompat-v7:24.1.1'
-  compile 'com.android.support:design:24.1.1'
+  compile 'com.android.support:appcompat-v7:25.1.0'
+  compile 'com.android.support:design:25.1.0'
   compile 'com.jakewharton:butterknife:7.0.1'
   compile 'com.google.dagger:dagger:2.2'
   compile 'com.squareup.retrofit2:retrofit:2.0.2'
   compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-  compile 'com.google.code.gson:gson:2.4'
+  compile 'com.google.code.gson:gson:2.7'
   compile 'com.google.code.findbugs:annotations:2.0.3'
   provided 'javax.annotation:jsr250-api:1.0'
   apt 'com.google.dagger:dagger-compiler:2.2'
 
   //the most important: DroidMVP :)
-  compile project(':library')
+  compile project(':app')
 
   //Test dependencies
 
-  testCompile 'com.android.support:appcompat-v7:24.1.1'
-  testCompile 'com.android.support:design:24.1.1'
+  testCompile 'com.android.support:appcompat-v7:25.1.0'
+  testCompile 'com.android.support:design:25.1.0'
   testCompile 'junit:junit:4.12'
   testCompile "org.robolectric:robolectric:3.0"
   testCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
